// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correcly closed 1`] = `
.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #24252E;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  padding-right: 0 !important;
  min-width: 5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1 ~ span {
  top: 0;
  right: 0;
  bottom: 0;
}

.emotion-7 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: minmax(min-content,max-content);
  gap: 0rem;
  justify-items: stretch;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-5 {
  position: relative;
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 3rem;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-5[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-5:required {
  box-shadow: none;
}

.emotion-5:hover {
  border-color: #7A7B8E;
}

.emotion-5:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

<body>
  <div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-6"
      >
        <label
          class="emotion-0"
          for="test-input-id"
          id="test-label-id"
        >
          Fruits
        </label>
        <div
          class="emotion-5"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="test-menu-id"
            aria-expanded="false"
            aria-labelledby="test-label-id"
            autocomplete="off"
            class="emotion-1"
            id="test-input-id"
            label="Fruits"
            role="combobox"
            type="text"
            value=""
          />
          <span
            class="emotion-4"
          >
            <button
              aria-controls="test-menu-id"
              aria-expanded="false"
              aria-label="Show options"
              class="emotion-3"
              id="test-toggle-button-id"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-2"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    />
  </div>
</body>
`;

exports[`rendering renders correcly opened 1`] = `
.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #24252E;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  padding-right: 0 !important;
  min-width: 5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1 ~ span {
  top: 0;
  right: 0;
  bottom: 0;
}

.emotion-69 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-7 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: minmax(min-content,max-content);
  gap: 0rem;
  justify-items: stretch;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-5 {
  position: relative;
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 3rem;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-5[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-5:required {
  box-shadow: none;
}

.emotion-5:hover {
  border-color: #7A7B8E;
}

.emotion-5:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-68 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-12 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-12:last-of-type {
  border-bottom: none;
}

.emotion-12:hover {
  background: #F0F0F5;
}

.emotion-12:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-11 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: start;
}

.emotion-9 {
  background-color: #FFFFFF;
  border: 1px solid #8F8FA2;
  border-radius: 2px;
  display: inline-block;
  height: 24px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 24px;
  min-width: 24px;
}

.emotion-8 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-8:hover + .emotion-9 {
  border-color: #7A7B8E;
}

.emotion-8:checked + .emotion-9 {
  background-color: #0069D0;
  border-color: #0069D0;
}

.emotion-8:checked + .emotion-9:after {
  content: "";
  border-right: 2px solid #FFFFFF;
  border-bottom: 2px solid #FFFFFF;
  position: absolute;
  width: 8px;
  height: 16px;
  top: 0;
  left: 7px;
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-8:indeterminate + .emotion-9 {
  background-color: #FFFFFF;
  border-color: #0069D0;
}

.emotion-8:indeterminate + .emotion-9:after {
  content: "";
  border-bottom: 3px solid #0069D0;
  position: absolute;
  top: -1px;
  left: 4px;
  width: 14px;
  height: 14px;
  opacity: 1;
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-8:focus + .emotion-9 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-8:disabled + .emotion-9 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-8:disabled + .emotion-9 + .css-1f2k2gl {
  color: #AAAAB9;
  cursor: not-allowed;
}

.emotion-10 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

<body>
  <div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-6"
      >
        <label
          class="emotion-0"
          for="test-input-id"
          id="test-label-id"
        >
          Fruits
        </label>
        <div
          class="emotion-5"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-labelledby="test-label-id"
            autocomplete="off"
            class="emotion-1"
            id="test-input-id"
            label="Fruits"
            role="combobox"
            type="text"
            value=""
          />
          <span
            class="emotion-4"
          >
            <button
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-label="Hide options"
              class="emotion-3"
              id="test-toggle-button-id"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-2"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    >
      <div
        class="emotion-69"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <ul
          class="emotion-68"
          tabindex="-1"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-0"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Apple
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-1"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Avocado
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-2"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Banana
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-3"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Blueberry
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-4"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Coconut
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-5"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Grape
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-6"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Lemon
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-7"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Mango
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-8"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Melon
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-9"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Orange
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-10"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Peach
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-12"
            id="test-item-id-11"
            role="option"
          >
            <div
              class="emotion-11"
            >
              <label
                class="emotion-10"
              >
                <input
                  class="emotion-8"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-9"
                />
              </label>
              Pear
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`rendering renders correcly opened and loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #24252E;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  padding-right: 0 !important;
  min-width: 5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1 ~ span {
  top: 0;
  right: 0;
  bottom: 0;
}

.emotion-71 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-7 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: minmax(min-content,max-content);
  gap: 0rem;
  justify-items: stretch;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-5 {
  position: relative;
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 3rem;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-5[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-5:required {
  box-shadow: none;
}

.emotion-5:hover {
  border-color: #7A7B8E;
}

.emotion-5:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-70 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-14 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-14:last-of-type {
  border-bottom: none;
}

.emotion-14:hover {
  background: #F0F0F5;
}

.emotion-14:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-9 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
  background: #F0F0F5;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  cursor: initial;
}

.emotion-9:last-of-type {
  border-bottom: none;
}

.emotion-9:hover {
  background: #F0F0F5;
}

.emotion-9:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-8 {
  pointer-events: none;
  font-size: 1rem;
  line-height: 1;
  color: #0069D0;
  float: right;
}

.emotion-8:after {
  -webkit-animation: animation-0 450ms infinite linear;
  animation: animation-0 450ms infinite linear;
  border: 2px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  content: "";
  display: inline-block;
  height: 1rem;
  width: 1rem;
}

.emotion-13 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: start;
}

.emotion-11 {
  background-color: #FFFFFF;
  border: 1px solid #8F8FA2;
  border-radius: 2px;
  display: inline-block;
  height: 24px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 24px;
  min-width: 24px;
}

.emotion-10 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-10:hover + .emotion-11 {
  border-color: #7A7B8E;
}

.emotion-10:checked + .emotion-11 {
  background-color: #0069D0;
  border-color: #0069D0;
}

.emotion-10:checked + .emotion-11:after {
  content: "";
  border-right: 2px solid #FFFFFF;
  border-bottom: 2px solid #FFFFFF;
  position: absolute;
  width: 8px;
  height: 16px;
  top: 0;
  left: 7px;
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-10:indeterminate + .emotion-11 {
  background-color: #FFFFFF;
  border-color: #0069D0;
}

.emotion-10:indeterminate + .emotion-11:after {
  content: "";
  border-bottom: 3px solid #0069D0;
  position: absolute;
  top: -1px;
  left: 4px;
  width: 14px;
  height: 14px;
  opacity: 1;
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-10:focus + .emotion-11 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-10:disabled + .emotion-11 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-10:disabled + .emotion-11 + .css-1f2k2gl {
  color: #AAAAB9;
  cursor: not-allowed;
}

.emotion-12 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

<body>
  <div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-6"
      >
        <label
          class="emotion-0"
          for="test-input-id"
          id="test-label-id"
        >
          Fruits
        </label>
        <div
          class="emotion-5"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-labelledby="test-label-id"
            autocomplete="off"
            class="emotion-1"
            id="test-input-id"
            label="Fruits"
            role="combobox"
            type="text"
            value=""
          />
          <span
            class="emotion-4"
          >
            <button
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-label="Hide options"
              class="emotion-3"
              id="test-toggle-button-id"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-2"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-busy="true"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    >
      <div
        class="emotion-71"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <ul
          class="emotion-70"
          tabindex="-1"
        >
          <li
            class="emotion-9"
          >
            Loading...
            <span
              class="emotion-8"
            />
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-0"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Apple
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-1"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Avocado
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-2"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Banana
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-3"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Blueberry
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-4"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Coconut
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-5"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Grape
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-6"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Lemon
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-7"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Mango
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-8"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Melon
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-9"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Orange
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-10"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Peach
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-14"
            id="test-item-id-11"
            role="option"
          >
            <div
              class="emotion-13"
            >
              <label
                class="emotion-12"
              >
                <input
                  class="emotion-10"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-11"
                />
              </label>
              Pear
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`rendering renders correcly with custom components correctly 1`] = `
.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #24252E;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  padding-right: 0 !important;
  min-width: 5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1 ~ span {
  top: 0;
  right: 0;
  bottom: 0;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-7 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: minmax(min-content,max-content);
  gap: 0rem;
  justify-items: stretch;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-5 {
  position: relative;
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 3rem;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-5[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-5:required {
  box-shadow: none;
}

.emotion-5:hover {
  border-color: #7A7B8E;
}

.emotion-5:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-35 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-9 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-9:last-of-type {
  border-bottom: none;
}

.emotion-9:hover {
  background: #F0F0F5;
}

.emotion-9:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-34 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: start;
}

.emotion-32 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-33 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: #FFFFFF;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0069D0;
  color: #FFFFFF;
  border: 1px solid #0069D0;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-33 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-33:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-33:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-33:not(:disabled):hover {
  background-color: #F0F0F5;
}

.emotion-33:not(:disabled):hover {
  background-color: #0051A2;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #217B00;
}

<body>
  <div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-6"
      >
        <label
          class="emotion-0"
          for="test-input-id"
          id="test-label-id"
        >
          Fruit
        </label>
        <div
          class="emotion-5"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-labelledby="test-label-id"
            autocomplete="off"
            class="emotion-1"
            id="test-input-id"
            label="Fruit"
            name="fruit"
            role="combobox"
            type="text"
            value=""
          />
          <span
            class="emotion-4"
          >
            <button
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-label="Hide options"
              class="emotion-3"
              id="test-toggle-button-id"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-2"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    >
      <div
        class="emotion-36"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <ul
          class="emotion-35"
          tabindex="-1"
        >
          <div
            style="background: rgb(240, 240, 245); padding: 0.25rem 0.5rem; cursor: initial;"
          >
            Prepend item
          </div>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-0"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Apple
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-1"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Avocado
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-2"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Banana
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-3"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Blueberry
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-4"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Coconut
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-5"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Grape
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-6"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Lemon
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-7"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Mango
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-8"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Melon
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-9"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Orange
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-10"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Peach
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-11"
            role="option"
          >
            <span
              class="emotion-8"
            >
              Custom 
              Pear
            </span>
          </li>
          <div
            style="background: rgb(240, 240, 245); padding: 0.25rem 0.5rem; cursor: initial;"
          >
            <div
              class="emotion-34"
            >
              <span
                class="emotion-32"
              >
                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quod modi, inventore quasi aut sed beatae corrupti repellendus minima voluptatem debitis, quibusdam repudiandae totam voluptatum odit.
              </span>
              <button
                class="emotion-33"
                data-testid="action-btn"
                type="button"
              >
                <span>
                  New item
                </span>
              </button>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
